<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.neckbeardproductions.studybuddy.fragments.AddCourseFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/course_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/course_name" />

        <EditText
            android:id="@+id/course_Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/course_code" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/course_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/course_description"
            android:inputType="textMultiLine" />

        <Spinner
                android:id="@+id/course_Colour_Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/course_lecturer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lecturers_title"
            android:textAlignment="center" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/course_lecturers_listview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/course_add_lecturer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/course_lecturers_listview"
                        android:background="@android:drawable/ic_input_add"
                        android:textAlignment="center" />
                </RelativeLayout>
            </ScrollView>

    </LinearLayout>
</LinearLayout>
